Edited files:     /chatbot.yaml     /src/scenarios/thematic/response.sc     /test/createTO.xml     /test/generalCommunication.xml     /test/thematic.xml

--- a/chatbot.yaml
+++ b/chatbot.yaml
@@ -24,7 +24,10 @@ injector:
 
 tests:
   include:
-    - test.xml
+    - generalCommunication.xml
+    - thematic.xml
+    - createTO.xml
+    
 
 nlp:
   intentNoMatchThresholds:
